@@ -47,6 +47,7 @@ import com.arcadedb.index.TypeIndex;
 import com.arcadedb.log.LogManager;
 import com.arcadedb.query.sql.executor.ExecutionPlan;
 import com.arcadedb.query.sql.executor.ExecutionStep;
+import com.arcadedb.query.sql.executor.QueryStatistics;
 import com.arcadedb.query.sql.executor.Result;
 import com.arcadedb.query.sql.executor.ResultSet;
 import com.arcadedb.schema.DocumentType;
@@ -55,10 +56,12 @@ import com.arcadedb.schema.Property;
 import com.arcadedb.schema.Schema;
 import com.arcadedb.schema.VertexType;
 import com.arcadedb.server.ArcadeDBServer;
+import com.arcadedb.server.HAServerPlugin;
 import com.arcadedb.server.security.ServerSecurityException;
 import com.arcadedb.server.security.ServerSecurityUser;
 import com.arcadedb.utility.CollectionUtils;
 
+import javax.net.ssl.SSLSocket;
 import java.io.ByteArrayInputStream;
 import java.io.EOFException;
 import java.io.IOException;
@@ -79,6 +82,7 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.logging.Level;
@@ -93,9 +97,13 @@ public class BoltNetworkExecutor extends Thread {
   // BOLT magic bytes
   private static final byte[] BOLT_MAGIC = { 0x60, 0x60, (byte) 0xB0, 0x17 };
 
-  // Supported protocol versions (in order of preference)
+  // Supported protocol versions (in order of preference). Package-private so the negotiation unit
+  // test asserts against the real advertised set rather than a drifting copy.
   // Encoding: [unused(8)][range(8)][minor(8)][major(8)] — major = value & 0xFF, minor = (value >> 8) & 0xFF
-  private static final int[] SUPPORTED_VERSIONS = { 0x00000404, 0x00000004, 0x00000003 }; // v4.4, v4.0, v3.0
+  static final int[] SUPPORTED_VERSIONS = {
+      0x00000405, 0x00000305, 0x00000205, 0x00000105, 0x00000005, // v5.4, v5.3, v5.2, v5.1, v5.0
+      0x00000404, 0x00000004, 0x00000003                          // v4.4, v4.0, v3.0
+  };
 
   // Server states
   private enum State {
@@ -111,7 +119,8 @@ public class BoltNetworkExecutor extends Thread {
   }
 
   private final ArcadeDBServer      server;
-  private final Socket              socket;
+  private volatile Socket           socket; // Reassigned to the SSLSocket once TLS negotiation completes
+  private final BoltSslHelper       sslHelper;
   private       BoltChunkedInput    input;
   private       BoltChunkedOutput   output;
   private final boolean             debug;
@@ -147,29 +156,30 @@ public class BoltNetworkExecutor extends Thread {
   private Map<String, Object> currentPlanMetadata;
   private String              currentPlanMetadataKey; // "plan" for EXPLAIN, "profile" for PROFILE
 
-  public BoltNetworkExecutor(final ArcadeDBServer server, final Socket socket, final BoltNetworkListener listener)
-      throws IOException {
+  public BoltNetworkExecutor(final ArcadeDBServer server, final Socket socket, final BoltNetworkListener listener) {
     this(server, socket, listener, null);
   }
 
   public BoltNetworkExecutor(final ArcadeDBServer server, final Socket socket, final BoltNetworkListener listener,
-      final byte[] preReadBytes) throws IOException {
+      final BoltSslHelper sslHelper) {
     super("BOLT-" + socket.getRemoteSocketAddress());
     this.server = server;
     this.socket = socket;
     this.listener = listener;
-    final InputStream inputStream = preReadBytes != null
-        ? new SequenceInputStream(new ByteArrayInputStream(preReadBytes), socket.getInputStream())
-        : socket.getInputStream();
-    this.input = new BoltChunkedInput(inputStream);
-    this.output = new BoltChunkedOutput(socket.getOutputStream());
+    this.sslHelper = sslHelper;
     this.debug = GlobalConfiguration.BOLT_DEBUG.getValueAsBoolean();
+    // NOTE: transport (TLS) negotiation and the socket I/O streams are intentionally set up in run(), on this
+    // per-connection thread, so a slow/failed/hostile TLS handshake can never block the shared accept thread.
   }
 
   @Override
   public void run() {
     ProtocolContext.set("bolt");
     try {
+      // Detect plaintext vs TLS and, if TLS, complete the handshake here (never on the listener accept thread).
+      if (!negotiateTransport())
+        return;
+
       state = State.NEGOTIATION;
 
       // Perform handshake
@@ -227,6 +237,79 @@ public class BoltNetworkExecutor extends Thread {
     } finally {
       ProtocolContext.clear();
       cleanup();
+    }
+  }
+
+  /**
+   * Negotiates the transport for this connection on the per-connection thread: peeks the first bytes to tell
+   * plaintext from TLS and, when TLS is used, completes the (blocking) handshake here. Running this off the
+   * listener accept thread is what prevents a single slow, aborted or untrusted TLS handshake from wedging the
+   * shared BOLT listener for all other clients (issue #5106).
+   *
+   * @return {@code true} if the transport is ready and the BOLT handshake can proceed; {@code false} if the
+   * connection was rejected or closed (the caller must stop).
+   */
+  private boolean negotiateTransport() {
+    try {
+      Socket connectionSocket = socket;
+      byte[] preReadBytes = null;
+
+      if (sslHelper != null && sslHelper.getTlsMode() != BoltSslHelper.TlsMode.DISABLED) {
+        // Bound transport detection and the TLS handshake with a read timeout so a stalled/hostile client
+        // cannot hold this connection thread (and its file descriptors) open forever.
+        final int handshakeTimeout = GlobalConfiguration.NETWORK_SOCKET_TIMEOUT.getValueAsInteger();
+        if (handshakeTimeout > 0)
+          socket.setSoTimeout(handshakeTimeout);
+
+        final byte[] header = new byte[4];
+        final InputStream rawIn = socket.getInputStream();
+        int bytesRead = 0;
+        while (bytesRead < 4) {
+          final int n = rawIn.read(header, bytesRead, 4 - bytesRead);
+          if (n == -1) {
+            // Client closed before sending the 4 transport-detection bytes: abandon this connection cleanly
+            // instead of re-reading a closed stream (the previous busy-spin that pinned a CPU core).
+            return false;
+          }
+          bytesRead += n;
+        }
+
+        final boolean isTls = header[0] == 0x16 && header[1] == 0x03;
+
+        if (isTls) {
+          // Handshake happens here, on this per-connection thread. A failure throws and only affects us.
+          final SSLSocket sslSocket = sslHelper.wrapWithTls(socket, header);
+          this.socket = sslSocket; // route all subsequent I/O and cleanup through the TLS socket
+          connectionSocket = sslSocket;
+        } else if (sslHelper.getTlsMode() == BoltSslHelper.TlsMode.REQUIRED) {
+          LogManager.instance().log(this, Level.WARNING,
+              """
+              BOLT rejecting non-TLS connection from %s (TLS is REQUIRED). \
+              Configure the client to use bolt+s:// or bolt+ssc://""",
+              socket.getRemoteSocketAddress());
+          return false;
+        } else {
+          // OPTIONAL mode with a plaintext connection: replay the peeked bytes into the BOLT handshake.
+          preReadBytes = header;
+        }
+
+        // Restore blocking semantics for the long-lived BOLT session.
+        connectionSocket.setSoTimeout(0);
+      }
+
+      final InputStream inputStream = preReadBytes != null
+          ? new SequenceInputStream(new ByteArrayInputStream(preReadBytes), connectionSocket.getInputStream())
+          : connectionSocket.getInputStream();
+      this.input = new BoltChunkedInput(inputStream);
+      this.output = new BoltChunkedOutput(connectionSocket.getOutputStream());
+      return true;
+
+    } catch (final Exception e) {
+      // Any failure here (aborted/untrusted TLS handshake, I/O error, handshake timeout) is scoped to THIS
+      // connection. Logging at FINE keeps a hostile client from flooding the log; the shared listener is fine.
+      if (debug)
+        LogManager.instance().log(this, Level.FINE, "BOLT transport negotiation failed: %s", e.getMessage());
+      return false;
     }
   }
 
@@ -295,30 +378,7 @@ public class BoltNetworkExecutor extends Thread {
       LogManager.instance().log(this, Level.FINE, "BOLT client versions: %s",
           Arrays.toString(Arrays.stream(clientVersions).mapToObj(v -> String.format("0x%08X", v)).toArray()));
 
-    // Select best matching version using Bolt version negotiation with range support.
-    // The range means the client supports minor versions from (minor - range) up to minor
-    // (inclusive) for the given major version. Zero entries are trailing padding per the Bolt spec.
-    protocolVersion = 0;
-    for (final int clientVersion : clientVersions) {
-      if (clientVersion == 0)
-        break;
-
-      final int clientMajor = getMajorVersion(clientVersion);
-      final int clientMinor = getMinorVersion(clientVersion);
-      final int clientRange = getVersionRange(clientVersion);
-
-      for (final int supportedVersion : SUPPORTED_VERSIONS) {
-        final int serverMajor = getMajorVersion(supportedVersion);
-        final int serverMinor = getMinorVersion(supportedVersion);
-
-        if (clientMajor == serverMajor && serverMinor <= clientMinor && serverMinor >= clientMinor - clientRange) {
-          protocolVersion = supportedVersion;
-          break;
-        }
-      }
-      if (protocolVersion != 0)
-        break;
-    }
+    protocolVersion = selectVersion(clientVersions);
 
     // Send selected version
     output.writeRawInt(protocolVersion);
@@ -376,6 +436,14 @@ public class BoltNetworkExecutor extends Thread {
     case BoltMessage.ROUTE:
       handleRoute((RouteMessage) message);
       break;
+    case BoltMessage.TELEMETRY:
+      // A FAILED connection must respond IGNORED to every request except RESET (Bolt state machine),
+      // consistent with the other request handlers; otherwise acknowledge with SUCCESS.
+      if (state == State.FAILED)
+        sendIgnored();
+      else
+        sendSuccess(Map.of());
+      break;
     default:
       sendFailure(BoltException.PROTOCOL_ERROR, "Unknown message: " + BoltMessage.signatureName(message.getSignature()));
     }
@@ -404,6 +472,13 @@ public class BoltNetworkExecutor extends Thread {
       }
     }
 
+    if (deferAuthToLogon(protocolVersion, scheme, principal, credentials)) {
+      // Bolt 5.1+ handshake: accept HELLO now, authenticate on the subsequent LOGON.
+      sendSuccess(buildHelloSuccessMetadata());
+      state = State.AUTHENTICATION;
+      return;
+    }
+
     // Try to authenticate
     if ("none".equals(scheme)) {
       // Explicit no-auth is always rejected.
@@ -414,24 +489,26 @@ public class BoltNetworkExecutor extends Thread {
     // Covers "basic" with credentials, any other/missing scheme with credentials, and
     // the missing-scheme/missing-credentials case (authenticateUser null-checks and
     // rejects with "Missing credentials" rather than treating it as implicitly
-    // authenticated).
-    // NOTE (Bolt 5.1+): a legitimate 5.1+ HELLO carries no auth at all - it moves to the
-    // separate LOGON message (see handleLogon) - so this call would incorrectly reject
-    // that valid handshake. Safe today because SUPPORTED_VERSIONS never advertises 5.x,
-    // so no compliant driver reaches here without a scheme/principal/credentials; guard
-    // on negotiated protocol version before 5.x negotiation is enabled.
+    // authenticated). A legitimate Bolt 5.1+ HELLO with no auth fields never reaches this
+    // point - the deferAuthToLogon() check above already routed it to await LOGON.
     if (!authenticateUser(principal, credentials)) {
       return;
     }
 
-    // Build success response with server info
-    // Use "Neo4j" prefix for compatibility with official Neo4j drivers
+    sendSuccess(buildHelloSuccessMetadata());
+    state = State.READY;
+  }
+
+  /**
+   * Builds the HELLO success metadata shared by the authenticated-success path and the Bolt 5.1+
+   * auth-deferral path. The "Neo4j" server prefix is used for compatibility with official Neo4j drivers.
+   * Insertion order (server first, then connection_id) is significant for wire equality.
+   */
+  private Map<String, Object> buildHelloSuccessMetadata() {
     final Map<String, Object> metadata = new LinkedHashMap<>();
     metadata.put("server", "Neo4j/5.26.0 compatible (ArcadeDB " + Constants.getRawVersion() + ")");
-    metadata.put("connection_id", "bolt-" + Thread.currentThread().getId());
-
-    sendSuccess(metadata);
-    state = State.READY;
+    metadata.put("connection_id", "bolt-" + Thread.currentThread().threadId());
+    return metadata;
   }
 
   /**
@@ -714,6 +791,10 @@ public class BoltNetworkExecutor extends Thread {
           metadata.put(currentPlanMetadataKey, currentPlanMetadata);
 
         if (currentResultSet != null) {
+          final Optional<QueryStatistics> stats = currentResultSet.getStatistics();
+          if (stats.isPresent() && stats.get().containsUpdates())
+            metadata.put("stats", BoltResultStats.toStatsMap(stats.get()));
+
           try {
             currentResultSet.close();
           } catch (final Exception e) {
@@ -758,7 +839,11 @@ public class BoltNetworkExecutor extends Thread {
     }
 
     // Discard all remaining records
+    Optional<QueryStatistics> stats = Optional.empty();
     if (currentResultSet != null) {
+      // Statistics are computed eagerly when the write is materialized in the query plan, so they
+      // are valid to read before draining/closing the result set.
+      stats = currentResultSet.getStatistics();
       while (currentResultSet.hasNext()) {
         currentResultSet.next();
       }
@@ -781,6 +866,8 @@ public class BoltNetworkExecutor extends Thread {
       metadata.put(currentPlanMetadataKey, currentPlanMetadata);
     currentPlanMetadata = null;
     currentPlanMetadataKey = null;
+    if (stats.isPresent() && stats.get().containsUpdates())
+      metadata.put("stats", BoltResultStats.toStatsMap(stats.get()));
     metadata.put("has_more", false);
 
     sendSuccess(metadata);
@@ -918,8 +1005,14 @@ public class BoltNetworkExecutor extends Thread {
       return;
     }
 
-    // For single-server setup, return this server as the only endpoint
-    final String address = getBoltAddress(GlobalConfiguration.BOLT_PORT.getValueAsInteger());
+    if (state != State.READY) {
+      // ROUTE enumerates every peer's Bolt endpoint, so it must not run for an unauthenticated caller.
+      // Require an authenticated (READY) session, matching the other request handlers. A Bolt driver
+      // always sends ROUTE after HELLO/LOGON, so this does not affect legitimate routing.
+      sendFailure(BoltException.PROTOCOL_ERROR, "ROUTE not expected in state: " + state);
+      state = State.FAILED;
+      return;
+    }
 
     final Map<String, Object> rt = new LinkedHashMap<>();
     rt.put("ttl", GlobalConfiguration.BOLT_ROUTING_TTL.getValueAsLong());
@@ -927,27 +1020,55 @@ public class BoltNetworkExecutor extends Thread {
 
     final List<Map<String, Object>> servers = new ArrayList<>();
 
-    // Writer server
-    final Map<String, Object> writer = new LinkedHashMap<>();
-    writer.put("addresses", List.of(address));
-    writer.put("role", "WRITE");
-    servers.add(writer);
+    final HAServerPlugin ha = server.getHA();
+    final HAServerPlugin.BoltRoutingTable table = ha != null ? ha.getBoltRoutingTable() : null;
 
-    // Reader server (same as writer for single-server)
-    final Map<String, Object> reader = new LinkedHashMap<>();
-    reader.put("addresses", List.of(address));
-    reader.put("role", "READ");
-    servers.add(reader);
+    if (table != null) {
+      // HA cluster with a known leader: the leader is the writer and a router, followers are readers and
+      // routers. Writer and readers come from one leader snapshot, so they cannot disagree about the leader.
+      final String writer = table.writer();
+      final List<String> readers = table.readers();
 
-    // Route server
-    final Map<String, Object> router = new LinkedHashMap<>();
-    router.put("addresses", List.of(address));
-    router.put("role", "ROUTE");
-    servers.add(router);
+      final List<String> routers = new ArrayList<>();
+      routers.add(writer);
+      routers.addAll(readers);
+
+      servers.add(roleEntry(List.of(writer), "WRITE"));
+      servers.add(roleEntry(readers.isEmpty() ? List.of(writer) : readers, "READ"));
+      servers.add(roleEntry(routers, "ROUTE"));
+    } else {
+      // No known leader. Advertise this node using the actual bound Bolt port of this connection rather
+      // than the global default.
+      final String address = getBoltAddress(socket.getLocalPort());
+      if (ha != null) {
+        // HA is active but the leader is not known yet (e.g. mid-election): advertise this node as reader
+        // and router only - never writer, since it may be a follower. The driver keeps reading and
+        // re-routes after the TTL, receiving a writer once the leader is known, instead of sending a write
+        // to a follower and getting an error.
+        servers.add(roleEntry(List.of(address), "READ"));
+        servers.add(roleEntry(List.of(address), "ROUTE"));
+      } else {
+        // True single-node deployment: this node is writer, reader, and router.
+        servers.add(roleEntry(List.of(address), "WRITE"));
+        servers.add(roleEntry(List.of(address), "READ"));
+        servers.add(roleEntry(List.of(address), "ROUTE"));
+      }
+    }
 
     rt.put("servers", servers);
 
     sendSuccess(CollectionUtils.singletonMap("rt", rt));
+  }
+
+  /**
+   * Builds a single ROUTE routing-table server entry pairing a list of client-reachable addresses with
+   * a Bolt routing role (WRITE, READ, or ROUTE).
+   */
+  private static Map<String, Object> roleEntry(final List<String> addresses, final String role) {
+    final Map<String, Object> entry = new LinkedHashMap<>();
+    entry.put("addresses", addresses);
+    entry.put("role", role);
+    return entry;
   }
 
   /**
@@ -1685,7 +1806,7 @@ public class BoltNetworkExecutor extends Thread {
       LogManager.instance().log(this, Level.FINE, "BOLT >> %s", message);
     }
 
-    final PackStreamWriter writer = new PackStreamWriter();
+    final PackStreamWriter writer = new PackStreamWriter().boltMajorVersion(getMajorVersion(protocolVersion));
     message.writeTo(writer);
     output.writeMessage(writer.toByteArray());
   }
@@ -1876,5 +1997,47 @@ public class BoltNetworkExecutor extends Thread {
 
   static int getVersionRange(final int version) {
     return (version >> 16) & 0xFF;
+  }
+
+  /**
+   * Select the highest-preference server version compatible with the client's proposals, or 0 if none match.
+   * Client proposals are tried in order; for each, the range means the client supports minor versions from
+   * (minor - range) up to minor inclusive for that major. A zero entry is trailing padding and stops the scan.
+   * Pure function over {@link #SUPPORTED_VERSIONS} so the negotiation logic is exercised directly by tests.
+   */
+  static int selectVersion(final int[] clientVersions) {
+    for (final int clientVersion : clientVersions) {
+      if (clientVersion == 0)
+        break;
+
+      final int clientMajor = getMajorVersion(clientVersion);
+      final int clientMinor = getMinorVersion(clientVersion);
+      final int clientRange = getVersionRange(clientVersion);
+
+      for (final int supportedVersion : SUPPORTED_VERSIONS) {
+        final int serverMajor = getMajorVersion(supportedVersion);
+        final int serverMinor = getMinorVersion(supportedVersion);
+
+        if (clientMajor == serverMajor && serverMinor <= clientMinor && serverMinor >= clientMinor - clientRange)
+          return supportedVersion;
+      }
+    }
+    return 0;
+  }
+
+  /**
+   * A Bolt 5.1+ HELLO carries no authentication - the driver authenticates with a separate LOGON.
+   * Returns true only when the negotiated version is >= 5.1 and the HELLO omits all auth fields, so
+   * such a HELLO is accepted (awaiting LOGON) instead of being rejected as "missing credentials".
+   * Pre-5.1 keeps HELLO-embedded auth; an explicit scheme (incl. "none") is never a deferral.
+   */
+  static boolean deferAuthToLogon(final int protocolVersion, final String scheme, final String principal,
+      final String credentials) {
+    final int major = getMajorVersion(protocolVersion);
+    final int minor = getMinorVersion(protocolVersion);
+    // Lexicographic >= 5.1 so a higher major with minor 0 (e.g. a hypothetical 6.0) still defers,
+    // rather than being excluded by an independent minor >= 1 test.
+    final boolean atLeast51 = major > 5 || (major == 5 && minor >= 1);
+    return atLeast51 && scheme == null && principal == null && credentials == null;
   }
 }
